[package]
authors = ["Pollen Robotics <contact@pollen-robotics.com>"]
name = "electric_dog"
version = "0.1.0"
publish = false

[target."cfg(target_arch = \"arm\")".dependencies]
cortex-m = "0.3.1"
cortex-m-rt = "0.3.6"
cortex-m-semihosting = "0.2.0"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.luos]
path = "../luos"

[target.'cfg(not(target_arch = "arm"))'.dependencies.mockup_hal]
git = "https://github.com/pollen/stm32-mockup-hal/"

[target.'cfg(target_arch = "arm")'.dependencies.stm32f0_hal]
git = "https://github.com/pollen/stm32f0/"
branch = "pwm"
